<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dp" >

   <TextView
        android:id="@+id/lblTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item"
        android:layout_margin="3dp" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal" android:padding="5dp">
        <requestFocus />
    </TextView>

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitle"
        android:hint="@string/title" 
        android:layout_margin="3dp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:hint="@string/description" 
        android:layout_margin="3dp" 
        android:minLines="3"/>
    
    <LinearLayout
        android:id="@+id/layoutDateandtime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription"
        android:layout_margin="3dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date"
            android:inputType="date" />

        <EditText
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time"
            android:inputType="date" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDateandtime"
        android:hint="@string/location" 
        android:layout_margin="3dp"/>
    
    <Spinner
        android:id="@+id/spinCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLocation" android:layout_margin="3dp"/>
        
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDone"        
        android:layout_centerHorizontal="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinCategory"
        android:layout_marginTop="5dp"
        android:text="@string/done" />


    
</RelativeLayout>