<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    
    android:padding="5dp" >

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/view_item"
        android:textAppearance="?android:attr/textAppearanceLarge" >

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitle"
        android:layout_margin="3dp"
        android:background="@drawable/back"
        android:focusable="false"
        android:hint="@string/title"
        android:padding="5dp" >

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_margin="3dp"
        android:background="@drawable/back"
        android:focusable="false"
        android:hint="@string/description"
        android:minLines="3"
        android:padding="5dp" />

    <LinearLayout
        android:id="@+id/layoutDateandtime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription"
        android:layout_margin="3dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="date"
            android:padding="5dp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:focusable="false"
            android:hint="@string/time"
            android:inputType="date"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDateandtime"
        android:background="@drawable/back"
        android:focusable="false"
        android:hint="@string/location"
        android:padding="5dp" android:layout_margin="3dip"/>

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLocation"
        android:layout_margin="3dp"
        android:padding="5dp"
        android:hint="@string/category"
        android:background="@drawable/back"/>

</RelativeLayout>